--- a/16_meie.mw
+++ b/16_meie.mw
@@ -8,7 +8,7 @@ De volgende gebeurtenissen vunnen of vienen plak op '''16 meie'''
 * [[2006]] - [[Ayaan Hirsi Ali]] vertrekt uut de [[Tweede Kamer|Twiede Kaemer]] en op dezelde dag maekt minister [[Rita Verdonk]] bekend dat uut onderzuuk bleken was dat Ayaan Hirsi Ali ''veurasnog et Nederlaanderschop niet verkregen bleek te hebben''.
 
 == Geboren ==
-* Ali Brals-Luinge (1920)
+* 1920 - Ali Brals-Luinge
 
 == Uut de tied ==
 * ...
