--- a/Margaretha_Kleine.mw
+++ b/Margaretha_Kleine.mw
@@ -1,4 +1,4 @@
-'''Margaretha Kleine''' ([[Nieuwlande]]) is een [[Drèents]]talige liedtiesschriefster, gitarist en zangeres van akoestische liedties.
+'''Margaretha Kleine''' ([[Nieuwlande]], [[27 augustus]] [[1972]]) is een [[Drèents]]talige liedtiesschriefster, gitarist en zangeres van akoestische liedties.
 
 Heur debuutplaot ''Drok'', op-eneumen mit gitarist Jeff Zwart en slagwarker Peter Deiman, is hielemaole in 't Drèents. Kleine hef alle teksten veur heur rèken eneumen. De plaot is op-eneumen in de studio van [[De Kast]]-zanger [[Syb van der Ploeg]], en wördden drekt nao 't uutkommen op 31 jannewaori 2008 album van de weke bi'j [[RTV Drenthe|Radio Drenthe]] en [[Omrop Fryslân|Radio Fryslân]].
 
