/* Inkelde gegevens van de maone */ opmoak

--- a/Maone_(eerde).mw
+++ b/Maone_(eerde).mw
@@ -25,7 +25,7 @@ De moan is ook n [[simbool]] veur t vraawleke, de zunne stait veur t mannelieke.
 |-
 |Tied tussen twie volle maonen || 29,5306 daegen (synodische maond)
 |-
-|[[Zwaortekracht]] op de maone || 1,62 m/s2
+|[[Zwaortekracht]] op de maone || 1,62 m/s<sup>2</sup>
 |}
 
 == Oppervlak ==
