--- a/Romantik_(strouming).mw
+++ b/Romantik_(strouming).mw
@@ -17,7 +17,7 @@ De Romantik is van oorsprüng een teagendrådske reakty up de [[Verlichting]], d
 * Wille boaven nüt.
 * Kwaliteit boaven kwantiteit.
 * een organiske natuurbekyk boaven een mechaniske natuurbekyk.
-* 'Mensken bint deyl van de natuur'' boaven ''De menkse steyt boaven de natuur''.
+* ''Mensken bint deyl van de natuur'' boaven ''De menkse steyt boaven de natuur''.
 
 ===Skilders van de Romantyk===
 * [[Caspar David Friedrich]]
@@ -28,7 +28,7 @@ De Romantik is van oorsprüng een teagendrådske reakty up de [[Verlichting]], d
 * [[Jean-Jacques Rousseau]]
 * ...
 
- {{Dialekt|sdz|[[Vechte|'t Vechtdal]]|Algemene Nedersaksiese Schriefwieze}}
+{{Dialekt|sdz|[[Vechte|'t Vechtdal]]|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Filosofische stroming]]
 [[Kategorie:Kunstperiode]]
