--- a/Goten.mw
+++ b/Goten.mw
@@ -1,5 +1,5 @@
 [[ofbeelding:Fíbula aquiliforme (M.A.N. Madrid) 01.jpg|thumb|Gotisch sieraod]]
-De '''Goten''' waren nen Oost-Germaans volk dät en grote rolle hef espöld in de ondergaank van 't [[West-Romeinse Rijk|West-Romeinse Riek.]]
+De '''Goten''' waren nen Oost-Germaans volk dät en grote rolle hef espöld in de ondergang van 't [[West-Romeinse Rijk|West-Romeinse Riek.]]
 
 == Oorsprong ==
 Er wördt edacht dät de Goten uut et zuuden van [[Scandinavië]] kwamen. D'r bint meansen die denkt dät de Goten van 't eilaand [[Gotlaand]] kwamen, umdät Gotlaand naor de Goten enuumd is. Geschiedkundigen bint et hier nog niet oaver iens.
