--- a/Geer.mw
+++ b/Geer.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Pferdeeuter.JPG|250px|thumb|De geer van een merrie (peerd)]]
-[[Bestaand:uier van een geit.jpg|right|thumb|De geer van n geit]]
+[[Bestaand:uier van een geit.jpg|thumb|De geer van n geit]]
 De '''geer''' is de naam van de [[melk]]klieren bie [[nereken|nerekers]], vergeliekbaor mit borsten bie de [[mense|mins]]. In de geer wort [[melk]] evormd waormee tiejens t zeugen t jong evoerd kan worren. De eerste melk die in de geer evormd wort heet [[biest]] of kolostrum en is iezig riek an ofweerstoffen. Naor n paor dagen komt de echte melk op gang.
 
 De melkvorming vient plaots in de melksellen. t Hormoon [[prolaktine]], dat of-escheien wort deur de [[hypofyse]], zörgt veur de melkproduksie. De groendstoffen veur de melk worren deur t bloed an-evoerd en deur [[diffusie]] in de melksellen op-eneumen. Hier worren de groendstoffen um-ezet in melk. Um één kilo melk te maken moen der hoenderden liters bloed deur de geer stromen. De melk wort op-esleugen in de melkboezem, n sponsachtige ruumte oender in de geer. De melk verlaot de geer deur de speunen of [[tit]]ten. 
@@ -11,7 +11,7 @@ Elk deel van de geer het n eigen melkstelsel en melkboezem. Bie de [[ko]]e is de
 ** ''gier'' (u.a. [[Ni'jlusen]])
 ** ''jaor''
 ** ''jidder, judder''
-** ''juur
+** ''juur''
 ** ''uur''
 * [[Grönnegs]]:
 ** ''gidder'' ([[Stadsgrunnegs|STD]], [[NVL]])
