--- a/Sunte-Marten_(feest).mw
+++ b/Sunte-Marten_(feest).mw
@@ -8,126 +8,145 @@ De kinder holdt een [[lampion]]nenoptocht en gaot van huus naor huus um der een 
 De liedjes verschilt arg van streek tot streek.
 
 === [[Achterhooks]] ===
-
-:''Vandaag is 't Sunte Marten en morgen Sunte Kruk.''
-:''Wi'j hebt nog goeie harten wi'j sloat ze stuk veur stuk.''
-:''Hölleken op een tölleken, Sunte Martens kölleken.''
-:''Geef wat, hol wat, geef den armen Thomas wat.''
-:''‘k kwam eens bij een rijke man, den zovele geven kan,''
-:''gevend zal hij leven, Zalig zal hij sterven,''
-:''de hemel zal hij erven, God zal hem belonen met honderddoezend kronen.''
-:''Met honderddoezend rökskes an. ''
-:''En doar kump Sunte Marten an.''
+<poem style="margin-left:1.5em; font-style:italic">
+Vandaag is 't Sunte Marten en morgen Sunte Kruk.
+Wi'j hebt nog goeie harten wi'j sloat ze stuk veur stuk.
+Hölleken op een tölleken, Sunte Martens kölleken.
+Geef wat, hol wat, geef den armen Thomas wat.
+‘k kwam eens bij een rijke man, den zovele geven kan,
+gevend zal hij leven, Zalig zal hij sterven,
+de hemel zal hij erven, God zal hem belonen met honderddoezend kronen.
+Met honderddoezend rökskes an. 
+En doar kump Sunte Marten an.
+</poem>
 
 === [[Drèents]] ===
-
-:''Sunt-Meerten, Sunt-Meerten.
-:''De koeien hebben steerten,
-:''de maagies die hebt rokkies an.
-:''Daor komp Sunt-Martines an.
+<poem style="margin-left:1.5em; font-style:italic">
+Sunt-Meerten, Sunt-Meerten.
+De koeien hebben steerten,
+de maagies die hebt rokkies an.
+Daor komp Sunt-Martines an.
+</poem>
 
 Een aander liedtien:
-:''Sunt Martinus Bisschop
-:''met zien hoge hoed op
-:''met zien lange slipjas an
-:''daor kump Sint Martinus an
-:''Gef mij een appel of een peer
-:''dan kump wij het hiele jaor niet weer
-:''Het hiele jaor dat duurt zo lang
-:''as mien lichien braanden kan
+<poem style="margin-left:1.5em; font-style:italic">
+Sunt Martinus Bisschop
+met zien hoge hoed op
+met zien lange slipjas an
+daor kump Sint Martinus an
+Gef mij een appel of een peer
+dan kump wij het hiele jaor niet weer
+Het hiele jaor dat duurt zo lang
+as mien lichien braanden kan
+</poem>
 
 === [[Graofschopper plat]] ===
+<poem style="margin-left:1.5em; font-style:italic">
+Sunnermatmans veugeltien,
+met dat rood rood keugeltien,
+met dat rood rood rökkien an,
+daor koump Sunnermatman an.
 
-:''Sunnermatmans veugeltien,
-:''met dat rood rood keugeltien,
-:''met dat rood rood rökkien an,
-:''daor koump Sunnermatman an.
-
-:''Laot ouns nich zo lange staon,
-:''wi'j mutt't nog nao Möinstern gaon.
-:''Möinstern is zo wied van hier,
-:''en wi'j bint nog altied hier.
+Laot ouns nich zo lange staon,
+wi'j mutt't nog nao Möinstern gaon.
+Möinstern is zo wied van hier,
+en wi'j bint nog altied hier.
+</poem>
 
 === [[Grunnegs]] ===
 
 Grunnegs laidke:
 
-:''Sunt-Martinus bisschop
-:''mit zien roege muts op,
-:''mit zien laange stevels aan,
-:''doar komt Sunt-Martinus aan.
+<poem style="margin-left:1.5em; font-style:italic">
+Sunt-Martinus bisschop
+mit zien roege muts op,
+mit zien laange stevels aan,
+doar komt Sunt-Martinus aan.
+</poem>
 
 n Aander laidke gaait:
 
-:''k Staai veur joen deur en t is duuster,
-:''mit mien lanteern en ik luuster
-:''komt der nog ain?
-:''ik kin niks zain
-:''aans gaai k weer vot in t duuster
+<poem style="margin-left:1.5em; font-style:italic">
+k Staai veur joen deur en t is duuster,
+mit mien lanteern en ik luuster
+komt der nog ain?
+ik kin niks zain
+aans gaai k weer vot in t duuster
+</poem>
 
 en:
 
-:''Mien lutje lanteern,''
-:''ik zai die zo geern,''
-:''doe daanst deur de stroaten''
-:''dat kist ja nait loaten''
-:''Mien lutje lanteern,''
-:''ik zai die zo geern''
+<poem style="margin-left:1.5em; font-style:italic">
+Mien lutje lanteern,
+ik zai die zo geern,
+doe daanst deur de stroaten
+dat kist ja nait loaten
+Mien lutje lanteern,
+ik zai die zo geern
+</poem>
 
 === [[Oost-Veluws]] ===
 Dit lied is eschreven in 't dialect van [[Elburg]]:
-:''Sonde-, Sonde-Marten''
-:''de konen dragen starten,''
-:''de kalvers dragen horens,''
-:''rieke, rieke torens.''
-:''Hier woont zo'n rieke man,''
-:''die zoveule geven kan,''
-:''veule zal e geven''
-:''zalig zal e leven.''
-:''Stook vuur, stook vuur,''
-:''Sonde-Marten is zo duur,''
-:''geef mien een höltjen of een turfien,''
-:''waor 'k mien mee kan warmen,''
-:''met mien blanke darmen,''
-:''stook vuur, stook vuur,''
-:''Sonde-Marten is zo duur.''
+<poem style="margin-left:1.5em; font-style:italic">
+Sonde-, Sonde-Marten
+de konen dragen starten,
+de kalvers dragen horens,
+rieke, rieke torens.
+Hier woont zo'n rieke man,
+die zoveule geven kan,
+veule zal e geven
+zalig zal e leven.
+Stook vuur, stook vuur,
+Sonde-Marten is zo duur,
+geef mien een höltjen of een turfien,
+waor 'k mien mee kan warmen,
+met mien blanke darmen,
+stook vuur, stook vuur,
+Sonde-Marten is zo duur.
+</poem>
 
 Dit lied is eschreven in 't dialect van [[Hattem]]:
-:''Sunte-Maarten keugeltien,
-:''met zo'n rond rond reugeltien.
-:''Met zo'n rond rond rökkien an,
-:''daor koump Suntermaarten an.
+<poem style="margin-left:1.5em; font-style:italic">
+Sunte-Maarten keugeltien,
+met zo'n rond rond reugeltien.
+Met zo'n rond rond rökkien an,
+daor koump Suntermaarten an.
 
-:''Sunte-Maarten is zo kold,
-:''geef 'm een stukkie vuur of holt.
-:''Daor kan hij mee warmen,
-:''met zien blanke darmen.
+Sunte-Maarten is zo kold,
+geef 'm een stukkie vuur of holt.
+Daor kan hij mee warmen,
+met zien blanke darmen.
 
-:''Hier woont nog zo'n rieke man,
-:''die zo veule geven kan.
-:''Veule zal hij geven,
-:''langer zal hij leven.
+Hier woont nog zo'n rieke man,
+die zo veule geven kan.
+Veule zal hij geven,
+langer zal hij leven.
 
-:''Honderd jaor en iene dag,
-:''dan wordt hij naor 't karkhof ebracht.
-:''Op een boeren wagen,
-:''wordt hij weg-edragen.
+Honderd jaor en iene dag,
+dan wordt hij naor 't karkhof ebracht.
+Op een boeren wagen,
+wordt hij weg-edragen.
+</poem>
 
 === [[Nederlaands]] ===
 Ok in 't Nederlaands bunt d'r veule liedjes. Zoas:
 
-:''Sint-Maarten, Sint-Maarten''
-:''de koeien hebben staarten''
-:''de meisjes hebben rokjes aan''
-:''daar komt Sint-Maarten aan''
+<poem style="margin-left:1.5em; font-style:italic">
+Sint-Maarten, Sint-Maarten
+de koeien hebben staarten
+de meisjes hebben rokjes aan
+daar komt Sint-Maarten aan
+</poem>
 
 of:
 
-:''Elf november is de dag''
-:''dat mijn lichtje''
-:''dat mijn lichtje''
-:''Elf november is de dag''
-:''dat mijn lichtje branden mag''
+<poem style="margin-left:1.5em; font-style:italic">
+Elf november is de dag
+dat mijn lichtje
+dat mijn lichtje
+Elf november is de dag
+dat mijn lichtje branden mag
+</poem>
 
 == Nedersaksisch ==
 * [[Achterhooks]]: ''Sunte-Marten''
