([[c:GR|GR]])  [[File:Baarn coa.jpg]] → [[File:Coat of arms of Baarn.svg]]

--- a/Baoren.mw
+++ b/Baoren.mw
@@ -3,7 +3,7 @@
 {{Gemaente |
 naam = Baarn |
 bestaandsnaam vlagge = Baarn flag.svg |
-bestaandsnaam woapn = Baarn coa.jpg|
+bestaandsnaam woapn = Coat of arms of Baarn.svg|
 lokatie = Dutch Municipality Baarn 2006 |
 proveensie = |
 heufdplaats = Baarn |
