*Empty MediaWiki Message*

--- a/West-Veluws.mw
+++ b/West-Veluws.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Veluws.png|thumb|De kaorte van t West-Veluwse dialekgebied (previnsie Gelderlaand en n stukjen van Utrech). Lochtgreun = West-Veluws, donkergreun = Oost-Veluws]]
-t '''West-Veluws''' is n groep van [[Nedersaksisch|Nedersaksiese]] dialekten die espreuken wörden in de [[Nederlaand|Nederlaandse]] provinsie [[Gelderlaand]]. t Wördt espreuken in verschillende [[Veluwe|Veluwse]] gemeenten, onder aandere in: [[Armelo]], [[Barreveld (gemeente)|Barneveld]], [[Harderwiek]], [[Niekark]], [[Nunspeet]], [[Putten]],  [[Schaarpezeel|Scharpezeel]], in zes darpen in de gemeente [[Ee (gemeente)|Ede]] (namelik: [[Lunteren]], [[Harskamp]], [[Otterlo]], [[Wekerum]], [[Hoenderloo]]{{Info|Völt gedeeltelik onder Apeldoorne en gedeeltelik onder Ede}}, [[Deelen]]) en twee darpen in de gemeente [[Apeldoorne (gemeente)|Apeldoorne]] (namelik: [[Uddel]] en [[Hoenderloo]]{{Info|Völt gedeeltelik onder Apeldoorne en gedeeltelik onder Ede}})
+t '''West-Veluws''' is n groep van [[Nedersaksisch|Nedersaksiese]] dialekten die espreuken wörden in de [[Nederlaand|Nederlaandse]] provinsie [[Gelderlaand]]. t Wördt espreuken in verschillende [[Veluwe|Veluwse]] gemeenten, onder aandere in: [[Armelo]], [[Barreveld (gemeente)|Barneveld]], [[Harderwiek]], [[Niekark]], hoeveloak [[Nunspeet]], [[Putten]],  [[Schaarpezeel|Scharpezeel]], in zes darpen in de gemeente [[Ee (gemeente)|Ede]] (namelik: [[Lunteren]], [[Harskamp]], [[Otterlo]], [[Wekerum]], [[Hoenderloo]]{{Info|Völt gedeeltelik onder Apeldoorne en gedeeltelik onder Ede}}, [[Deelen]]) en twee darpen in de gemeente [[Apeldoorne (gemeente)|Apeldoorne]] (namelik: [[Uddel]] en [[Hoenderloo]]{{Info|Völt gedeeltelik onder Apeldoorne en gedeeltelik onder Ede}})
 
 t West-Veluws wördt oek espreuken in de Utrechtse plaotse [[Bunsjoten|Bunschoten-Spakenburg]] en van oorsprong oek in [[Leusden]] en [[Amersfoort]], mer hier is t dialekt al (zo goed as) uutestörven. t Geschei tussen t West-Veluws in t noordoosten en [[Utrechs-Alblasserwaards|Utrechts]] en [[Zuud-Gelders]] in t zuudwesten is iezelig refelig: oek de dialekten van bieveurbeeld [[Soest]], [[Eemnes]], [[Huzen]] en [[Laorne|Laoren]] hebben nog Nedersaksiese kenmarken, disse dialekten wörden dan oek wel heel soms bie t West-Veluws erekend, mer meestentieds bie t [[Hollaans (dialekt)|Hollaands]] of t Utrechts.<ref>Bron: ''Taal in stad en land - Utrechts, Veluws en Flevolands'' van [[Harrie Scholtmeijer]]</ref>
 
