--- a/Sköppingen.mw
+++ b/Sköppingen.mw
@@ -16,7 +16,7 @@ Wyders gevt et noch ses [[noaberschop|nåberskappen]]:
 *[[Heven]]
 *[[Tinge]]
 
-Daarnaast wordt het landelijke gedeelte van de gemeente onderverdeeld in 6 gehuchten of buurschappen (Bauerschaften), zie bovenstaand plattegrondje. Tot aan de gemeentelijke herindeling van 1969 was dit landelijke gebied, evenals Eggerode, een aparte kerspelgemeente, zoals in Nederland vroeger ook het geval was met Stad Delden en het omringende Ambt-Delden.
+Töt an de gemeyndelike herindeyling van [[1969]] warren disse nåberskappen ne afsünderlike karspelgemeynde, sou as dat eyrder in [[Tweante|Twente]] ouk was in [[Delden]] en [[Ambt Dealdn|Ambt Delden]]. 
 
 ==Ligging, verkeyr, vervoor==
 Gemeynde Sköppingen ligt in et noorden van landkreis Borken, kortby de 'dreelandenhook', wåras Kreis Borken tehoupe kümt med [[Coesfeld]] en [[Stemmert]].
