--- a/Westerwoolde_(streek).mw
+++ b/Westerwoolde_(streek).mw
@@ -1,5 +1,4 @@
-[[Ofbeelding:Landschap Westerwolde.jpg|right|250px|thumb|Laandschop van Westerwoolde]]
-<div style="text-align: justify">
+[[Ofbeelding:Landschap Westerwolde.jpg|250px|thumb|Laandschop van Westerwoolde]]
 '''Westerwoolde''' (of: ''Westerwooldingerlaand'') is n gebiet in t zuudoosten van de provinsie [[Grunnen (provìnzie)|Grönnen]] rund de revierkens [[Westerwoldse Oa|Westerwoldse Ao]], [[Ruten Oa|Ruten Ao]] en [[Muzzel Oa|Mussel Ao]]. t Heurt pas zeit 1619 bi Grönnen en dus ok bi [[Nederlaand|de Nederlanden]]. Westerwoolde haar immer n eigense identiteit, man hef dat in de loop der eiwen verloorn. Dei eigense identiteit is veural veroorzaokt deur de isoleerde liggen van t gewest. In de [[Middeleiwen]] waar Westerwoolde enkeld ein zaandrog, in t midden van twei grote [[Vene (grondsoorte)|venen]]. t Gaf man twei deurgangen naor [[Duutsland]] (bie Traopel en Boertang), ein naor [[Dreinte]] (bie Roswinkel) en ein naor Grönnen (bie Wedde).
 
 t Gebiet wordt oft as [[Ommelanden|Ommelaand]] anduden, man hef nimmer de offisjele staotus van Ommelaand had. 
@@ -20,8 +19,8 @@ Ofbeelding:Lokoatsie Westerwolde2.JPG|Geograofisch gebiet Westerwoolde
 ==Boetende heenwiezen==
 *[http://www.waarwesterwolde.de/ Infowebstee van de VVV Westerwolde up Duuts en Nederlaands]
 *[http://www.youtube.com/watch?v=xBErfcYmVbg Interview mit Edo Jans oet Westerwoolde over dizze streek, up Grönnegs (gein Westerwoolds)]
-{{commonscat|Westerwolde}}
 
+{{commonscat|Westerwolde}}
 {{GrunnegerOmmelanden}}
 {{Dialekt|gos|[[Westerwoolds|Westerwolde]]}}
 
