--- a/Hunzego.mw
+++ b/Hunzego.mw
@@ -1,5 +1,4 @@
-[[Ofbeelding:Lokoatsie Hunzego.JPG|right|thumb|Lokoatsie van Hunzego in Grunnen]]
-<div style="text-align: justify">
+[[Ofbeelding:Lokoatsie Hunzego.JPG|thumb|Lokoatsie van Hunzego in Grunnen]]
 '''Hunzego''' (of: ''Hunsingo'') is n streek in provìnzie [[Grunnen (provìnzie)|Grunnen]], legen tuzzen [[Raitdaip|Rietdaip]] en [[Moarvliet]]. t Grenst in noorden aan [[Waddenzee]], in oosten aan [[Fivelgo]], in westen aan [[Westerkwartaaier]] en [[Frieslaand|Fraislaand]] en in zuden aan [[Gerecht (streek)|Gerecht]]. 
 
 == Algemain ==
