Sortering van [[:Kategorie:Laand]] anpasd naor "*" ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -1689,5 +1689,5 @@ De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty
 
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 
-[[Kategorie:Laand]]
+[[Kategorie:Laand|*]]
 [[Kategorie:Lysten|Landen van de wearld]]
