([[c:GR|GR]])  [[File:Landsmeer vlag.png]] → [[File:Landsmeer vlag.svg]]

--- a/Laandsmeer.mw
+++ b/Laandsmeer.mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | naam = Laandsmeer
-| bestaandsnaam vlagge = Landsmeer vlag.png
+| bestaandsnaam vlagge = Landsmeer vlag.svg
 | bestaandsnaam woapn = Landsmeer wapen.png
 | lokatie = LocatieLandsmeer
 | proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
