([[c:GR|GR]])  [[File:Velsen vlag.png]] → [[File:Velsen vlag.svg]]

--- a/Velsen.mw
+++ b/Velsen.mw
@@ -1,6 +1,6 @@
 {{Gemeante |
 naam = Velsen |
-bestaandsnaam vlagge = Velsen vlag.png |
+bestaandsnaam vlagge = Velsen vlag.svg |
 bestaandsnaam woapn = Velsen wapen.png |
 lokatie = LocatieVelsen |
 proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]] |
