*Empty MediaWiki Message*

--- a/Björn_Kuipers.mw
+++ b/Björn_Kuipers.mw
@@ -1,3 +1,4 @@
+[[Bestaand:Bj%C3%B6rn_Kuipers_-_ConfedCup2013Champions15_%28cropped%29.jpg|thumb|right|300px|Björn Kuipers]]
 Björn Kuipers ([[Oldnzel|Oldensaele]], [[1973]]) is nen [[Nederlaand|neaderlandsken]] [[skeidsrechter]] in et betaald [[vootbal]] en underneamer. Hee leidet wedstryden in de [[Earedivisie (voetbal)|Eyredivisy]] en up europeesk niveau. Hee warket altyd med deselvde grensrechters: Sander van Roekel en Erwin Zeinstra.
 
 == Persöönlik ==
