[[:Kategorie:Voetbal]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Björn_Kuipers.mw
+++ b/Björn_Kuipers.mw
@@ -6,3 +6,4 @@ Kuipers deade 'Facilitair management' studeren an Hougeskole Diedenoort in [[Wag
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Sporter oet Oaveriessel]]
+[[Kategorie:Voetbal]]
