--- a/Sepp_Blatter.mw
+++ b/Sepp_Blatter.mw
@@ -3,6 +3,7 @@
 
 Hee wör in [[1998]] ekeuzen as opvolger van [[João Havelange]]. In 2002, 2007 en 2011 wör he herkeuzen. Ook in [[2015]] steet he wier kandidaat. Zinne kandidatuur wörd umgewen met verskillende [[umkeuperieje]]-skandalen.
 
+{{DEFAULTSORT:Blatter, Sepp}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Voetbal]]
 [[Kategorie:Zwitserlaand]]
