--- a/Noorwegen.mw
+++ b/Noorwegen.mw
@@ -8,7 +8,7 @@
 | heufdstad = [[Oslo]]
 | religie = [[lutheranisme|luthers]]
 | regeringsvorm = [[Parlementaire monarchie|Parlementaire konstitutionele monarchie]]
-| km2 = 385 207</sup><ref name="kart">[https://www.kartverket.no/Kunnskap/Fakta-om-Norge/Arealstatistikk/Arealstatistikk-Norge/ Arealstatistics for Norway 2020, Kartverket, mapping directory for Norway] Accessdate=2020-03-08</ref> | pctwaeter = 6
+| km2 = 385 207<ref name="kart">[https://www.kartverket.no/Kunnskap/Fakta-om-Norge/Arealstatistikk/Arealstatistikk-Norge/ Arealstatistics for Norway 2020, Kartverket, mapping directory for Norway] Accessdate=2020-03-08</ref> | pctwaeter = 6
 | inwoners = 5 391 369<ref name="ssbf">[https://www.ssb.no/en/befolkning/statistikker/folkemengde/aar-per-1-januar Population, january 01 2021, Statistics Norway] Accessdate=2021-02-23</ref><small>(2021)</small>
 | dichthied = 14
 | muntienhied =  [[Noorse krone]] | valutakode = NOK
@@ -34,27 +34,27 @@ Noorwegen is verdield in 11 perveensies ([[Noors]]: ''fylker''). De perveensies 
 !Perveensies 
 !Administrative center
 |-
-| align=left|3||[[File:Oslo_komm.svg|link=https://pl.wikipedia.org/wiki/File:Oslo_komm.svg|alt=|tlo|27x27px]] [[Oslo]]||[[Oslo]]
+| align=left|3||[[File:Oslo_komm.svg|27x27px]] [[Oslo]]||[[Oslo]]
 |-
-| align=left|11||[[File:Rogaland_våpen.svg|link=https://pl.wikipedia.org/wiki/File:Rogaland_v%C3%A5pen.svg|alt=|tlo|27x27px]] [[Rogaland]]||[[Stavanger]]
+| align=left|11||[[File:Rogaland_våpen.svg|27x27px]] [[Rogaland]]||[[Stavanger]]
 |-
-| align=left|15||[[File:Møre_og_Romsdal_våpen.svg|link=https://pl.wikipedia.org/wiki/File:M%C3%B8re_og_Romsdal_v%C3%A5pen.svg|alt=|tlo|27x27px]] [[Møre og Romsdal]]||[[Molde]]
+| align=left|15||[[File:Møre_og_Romsdal_våpen.svg|27x27px]] [[Møre og Romsdal]]||[[Molde]]
 |-
-| align=left|18||[[File:Nordland_våpen.svg|link=https://pl.wikipedia.org/wiki/File:Nordland_v%C3%A5pen.svg|alt=|tlo|28x28px]] [[Nordland]]||[[Bodø]]
+| align=left|18||[[File:Nordland_våpen.svg|28x28px]] [[Nordland]]||[[Bodø]]
 |-
-| align=left|30||[[File:Viken_våpen.svg|link=https://pl.wikipedia.org/wiki/File:Viken_v%C3%A5pen.svg|alt=|tlo|28x28px]] [[Viken]]||[[Oslo]], [[Drammen]], [[Sarpsborg]]
+| align=left|30||[[File:Viken_våpen.svg|28x28px]] [[Viken]]||[[Oslo]], [[Drammen]], [[Sarpsborg]]
 |-
-| align=left|34||[[File:Innlandet_våpen.svg|link=https://pl.wikipedia.org/wiki/File:Innlandet_v%C3%A5pen.svg|alt=|tlo|28x28px]] [[Innlandet]]||[[Hamar]], [[Lillehammer]]
+| align=left|34||[[File:Innlandet_våpen.svg|28x28px]] [[Innlandet]]||[[Hamar]], [[Lillehammer]]
 |-
-| align=left|38||[[File:Vestfold_og_Telemark_våpen.svg|link=https://pl.wikipedia.org/wiki/File:Vestfold_og_Telemark_v%C3%A5pen.svg|alt=|tlo|26x26px]] [[Vestfold og Telemark]]||[[Skien]], [[Tønsberg]]
+| align=left|38||[[File:Vestfold_og_Telemark_våpen.svg|26x26px]] [[Vestfold og Telemark]]||[[Skien]], [[Tønsberg]]
 |-
-| align=left|42||[[File:Agder_våpen.svg|link=https://pl.wikipedia.org/wiki/File:Agder_v%C3%A5pen.svg|alt=|tlo|28x28px]] [[Agder]]||[[Kristiansand]], [[Arendal]]
+| align=left|42||[[File:Agder_våpen.svg|28x28px]] [[Agder]]||[[Kristiansand]], [[Arendal]]
 |-
-| align=left|46||[[File:Vestland_våpen.svg|link=https://pl.wikipedia.org/wiki/File:Vestland_v%C3%A5pen.svg|alt=|tlo|27x27px]] [[Vestland]]||[[Bergen]], [[Leikanger]]
+| align=left|46||[[File:Vestland_våpen.svg|27x27px]] [[Vestland]]||[[Bergen]], [[Leikanger]]
 |-
-| align=left|50||[[File:Trøndelag våpen.svg|link=https://pl.wikipedia.org/wiki/File:Tr%C3%B8ndelag_v%C3%A5pen.png|tlo|31x31px]] [[Trøndelag]]||[[Steinkjer]]
+| align=left|50||[[File:Trøndelag våpen.svg|31x31px]] [[Trøndelag]]||[[Steinkjer]]
 |-
-| align=left|54||[[File:Troms og Finnmark våpen.svg|link=https://pl.wikipedia.org/wiki/File:Troms og Finnmark våpen.svg|alt=|tlo|40x40px]] [[Troms og Finnmark]]||[[Tromsø]], [[Vadsø]]
+| align=left|54||[[File:Troms og Finnmark våpen.svg|40x40px]] [[Troms og Finnmark]]||[[Tromsø]], [[Vadsø]]
 |}<br />
 
 == Belangrieke plakken ==
