--- a/Italiaonse_Wikipedie.mw
+++ b/Italiaonse_Wikipedie.mw
@@ -2,36 +2,36 @@
 De '''Italiaonse Wikipedie''' ([[Italiaons]]: ''Wikipedia in italiano'') is n oetgave in de [[Italiaons]]e taol van de [[internet|digitaole]] [[ensyklopedie]] [[Wikipedie]]. De Italiaonse Wikipedie gung in [[jannewaori]] [[2002]] van start. Sinds begin 2013 het de Italiaonse Wikipedie meer as n miljoen artikels.
 
 == De Wikipedieën in verschillende Italiaonse taolen ==
-* [http://it.wikipedia.org/wiki/ (Standard-)Italiaons]
+* [[:it:|(Standard-)Italiaons]]
 
 === Noord-Italië ===
-* [http://pms.wikipedia.org/wiki/Intrada Piëmontees]
-** [http://pms.wikipedia.org/wiki/Lenga_piemont%C3%A8isa artikel over Piëmontees]
-* [http://vec.wikipedia.org/wiki/P%C3%A0xena_prinsipa%C5%82e Venetsiaons]
-* [http://lmo.wikipedia.org/wiki/Pagina_principala Lumbaart, Lombardies]
-* [http://lij.wikipedia.org/wiki/Pagina_prin%C3%A7ip%C3%A2 Liguru, Liguries]
+* [[:pms:|Piëmontees]]
+** [[:pms:Lenga piemontèisa|artikel over Piëmontees]]
+* [[:vec:|Venetsiaons]]
+* [[:lmo:|Lumbaart, Lombardies]]
+* [[:lij:|Liguru, Liguries]]
 
 ==== Emilia-Romagna ====
-* [http://eml.wikipedia.org/wiki/PP_%28ARZ%29 Arzan (Emilian e rumagnol), taol van Reggio-Emilia]
-* [http://eml.wikipedia.org/wiki/PP_%28BLG%29 Bulgnais, Bolonjees]
-* [http://eml.wikipedia.org/wiki/PP_%28CAR%29 Cararin, Carrarees]
-* [http://eml.wikipedia.org/wiki/PP_%28FRA%29 Frares, Ferrarees]
-* [http://eml.wikipedia.org/wiki/PP_%28MAN%29 Mantuan, Mantuaons]
-* [http://eml.wikipedia.org/wiki/PP_%28MUD%29 Mudnes, Modenees]
-* [http://eml.wikipedia.org/wiki/PP_%28PIA%29 Piasintein, Piasentees]
-* [http://eml.wikipedia.org/wiki/PP_%28PRA%29 Pramzan, Parmees]
-* [http://eml.wikipedia.org/wiki/PP_%28RUM%29 Rumagnol, taal van de Romagna]
+* [[:eml:PP (ARZ)|Arzan (Emilian e rumagnol), taol van Reggio-Emilia]]
+* [[:eml:PP (BLG)|Bulgnais, Bolonjees]]
+* [[:eml:PP (CAR)|Cararin, Carrarees]]
+* [[:eml:PP (FRA)|Frares, Ferrarees]]
+* [[:eml:PP (MAN)|Mantuan, Mantuaons]]
+* [[:eml:PP (MUD)|Mudnes, Modenees]]
+* [[:eml:PP (PIA)|Piasintein, Piasentees]]
+* [[:eml:PP (PRA)|Pramzan, Parmees]]
+* [[:eml:PP (RUM)|Rumagnol, taal van de Romagna]]
 
 === Zuud-Italië ===
-* [http://nap.wikipedia.org/wiki/Paggena_prencepale Napulitano, Napolitaons]
-* [http://scn.wikipedia.org/wiki/P%C3%A0ggina_principali Siculu, Sisiliaons]
+* [[:nap:|Napulitano, Napolitaons]]
+* [[:scn:|Siculu, Sisiliaons]]
 
 === Korsika ===
-* [http://co.wikipedia.org/wiki/Pagina_maestra Cursu, Korsikaons]
-* [http://incubator.wikimedia.org/wiki/Wp/sdc/P%C3%A0gina_prinzipari Vichipedìa in linga sassaresa]
+* [[:co:|Cursu, Korsikaons]]
+* [[:incubator:Wp/sdc/Pàgina prinzipari|Vichipedìa in linga sassaresa]]
 
 === Sardinië ===
-* [http://sc.wikipedia.org/wiki/P%C3%A0gina_printzipale Sardies]
+* [[:sc:|Sardies]]
 
 ==Uutgaonde verwiezing==
 {{Interwiki|kode=it|naam=Italiaanse}}
