--- a/Saxo_Grammaticus.mw
+++ b/Saxo_Grammaticus.mw
@@ -15,7 +15,7 @@ Saxo's underwys en vaerdigheiden understüttet et idee dat hee buten Dänemark n
 Saxo syn gröätste nålåtenskap sint de sesteen böke vul heldhaftige geskydskryving oaver de [[Dänen (volk)|Dänen]], syne ''[[Gesta Danorum]]''.
 
 == Gesta Danorum ==
-In et vöärwoord van et wark skrivt Saxo dat syn patroonhear Aartsbiskop Absalon van Lund (1128 - 21 maert 1201)<ref>[http://denstoredanske.dk/Danmarks_geografi_og_historie/Danmarks_historie/Danmark_f%C3%B8r_Reformationen/Skjalm_Hvide Den Store Danske, Gyldendal. "Skjalm Hvide". Bekeaken up 16 juli 2019.]</ref> em anspoard had ne heroiske geskydenisse te skryven van et däänske volk. Et wark begün rund 1185 nå at Sven Aggesen syne geskydenisse al skreaven had. Et dool van de ''Gesta Danorum'' was, so as Saxo skrivt, "uns vaderland te eyren." Dårvöär gebröäk hee et model van [[Vergillius]] synen [[Aeneis]]. Ouk likt hee stark ekeaken te hebben når [[Plato]], [[Cicero]] en ouk meyr når syne tydsgenoten, so as [[Geoffrey van Monmouth]].
+In et vöärwoord van et wark skrivt Saxo dat syn patroonhear Aartsbiskop Absalon van Lund (1128 - 21 maert 1201)<ref>[https://denstoredanske.lex.dk/Skjalm_Hvide Den Store Danske, Gyldendal. "Skjalm Hvide". Bekeaken up 16 juli 2019.]</ref> em anspoard had ne heroiske geskydenisse te skryven van et däänske volk. Et wark begün rund 1185 nå at Sven Aggesen syne geskydenisse al skreaven had. Et dool van de ''Gesta Danorum'' was, so as Saxo skrivt, "uns vaderland te eyren." Dårvöär gebröäk hee et model van [[Vergillius]] synen [[Aeneis]]. Ouk likt hee stark ekeaken te hebben når [[Plato]], [[Cicero]] en ouk meyr når syne tydsgenoten, so as [[Geoffrey van Monmouth]].
 
 De brunnen dee as Saxo gebrukt sint historisk meskeen nit al te betrouwbår, mär hee had nit wat anders. Syne kennis haalden hee uut [[Ieslaand|yslandske]] vertelsels, olde böke, [[runes (skrift)|runen]] up steynder en de verhalen van den Aartsbiskop (as den et oaver sikselv had). Dårmed was et wark nit echt ne geskydskryving of nen bündel olde verhalen, mär volgens kenner Friis-Jensen (2006) vöäral "een produkt van Saxo en de tyd wårin hee leavden." Volgens Westergaard (1952) deade Saxo de geskydenisse en mytology uut de heroiske tyd van Dänemarken samenvogen en bewarkeden dat as een eygen verhaal dat et verleaden van de dänen vöärstelt.
 
@@ -49,6 +49,5 @@ Wat upvalt is dat nå Absalon synen doud in 1202 Saxo Grammaticus anders güng s
 {{commonscat|Saxo Grammaticus}}
 
 {{DEFAULTSORT:Grammaticus, Saxo}}
-
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Denmaark]]
