*Empty MediaWiki Message*

--- a/Aly_Freije.mw
+++ b/Aly_Freije.mw
@@ -1,6 +1,6 @@
 '''Aly Freije''' (1944) is n dichteres en schriefster ien t [[Grunnegs]] en t [[Nederlaands]]. Zai is ook dosìnt literèr schrieven. Freije is opgruid ien [[Veelerveen]] ien provìnzie [[Grunnen (provìnzie)|Grunnen]].
 
-Ien 2008 het zai mit viefdailege gedichtenrieg ''In lichtbundels daanst t stof'' de vernuimde [[Freudenthal-Pries]] veur nije [[Nedersaksische schrieveri'je|Leegsaksische schrieverij]] wonnen.<ref>[http://www.huusvandetaol.nl/content/view/162/1/ Huus van de Taol: ''Dichteres Aly Freije wint Duitse literatuurprijs'']</ref><ref>[http://www.dvhn.nl/nieuws/kunst/article3758129.ece/Herinneringen_aan_Groningen_door_dansend_stof_in_Andalusi%C3%AB Dagblad van het Noorden: ''Herinneringen aan Groningen door dansend stof in Andalusië'']</ref>
+Ien 2008 het zai mit viefdailege gedichtenrieg ''In lichtbundels daanst t stof'' de vernuimde [[Freudenthal-Pries]] veur nije [[Nedersaksische schrieveri'je|Leegsaksische schrieverij]] wonnen.<ref>[http://www.huusvandetaol.nl/content/view/162/1/ Huus van de Taol: ''Dichteres Aly Freije wint Duitse literatuurprijs'']</ref><ref>[https://www.dvhn.nl/nieuws/kunst/article3758129.ece/Herinneringen_aan_Groningen_door_dansend_stof_in_Andalusië Dagblad van het Noorden: ''Herinneringen aan Groningen door dansend stof in Andalusië'']</ref>
 
 Vanof 2007 het Freije dichtwaark stoan ien t Grunneger literère tiedschrift ''[[Krödde (tiedschrift)|Krödde]]''. Ien dat joar won zai mit heur gedicht ''Weerom'' de 12e [[Pervinzjoale Grunneger Schriefwedstried]] (onderdail gedichten, volwassenen). De jury het van dit gedicht maind: '' 'Lezer wordt mittrokken en vuilt hom net zo onthand mit de schoamele herinnerns. Meer blift ter nait over van t verleden. En t heden trekt joe alweer bie kop en kont noar dag van nou. Dit is n dichter.' ''<ref>[http://huisvandegroningercultuur.nl/nieuwsoverview/43/ Huis van de Groninger Cultuur: ''Finale Pervinzioale Grunneger Schriefwedstried'']</ref>
 
@@ -12,5 +12,5 @@ Vanof 2007 het Freije dichtwaark stoan ien t Grunneger literère tiedschrift ''[
 *[http://www.taalpalet.nl/index_bestanden/Page571.htm Gedichten ''Himalaya'' en ''Weerom'']
 
 {{DEFAULTSORT:Freije, Aly}}
-[[Kategorie:Grunnegs_artikel]]
+[[Kategorie:Grunnegs artikel]]
 [[Kategorie:Schriever ien t Grunnegs]]
