([[c:GR|GR]])  [[File:HainautGemeenten.png]] → [[File:Municipalities Hainaut Belgium Map - Number.svg]]

--- a/Hainego.mw
+++ b/Hainego.mw
@@ -15,7 +15,7 @@
 | Gouverneur = [[Claude Durieux]]
 | Webstee = [http://www.hainaut.be/ www.hainaut.be]
 }}
-[[Ofbeelding:HainautGemeenten.png|right|Gemainten in Hainego]]
+[[Ofbeelding:Municipalities Hainaut Belgium Map - Number.svg|right|Gemainten in Hainego]]
 '''Hainego''' ([[Frans]]: ''Hainaut'', [[Woals]]: ''Hinnot'', [[Nederlaands|Floams]]: ''Henegouwen'') is n provìnzie ien t zuudwesten van [[Belgie]], mit as heufdstad [[Bergen (België)|Baargen]] (Mons). t Oppervlak is 3786 [[vierkaante kilemeter|km²]] en de provìnzie telt 1.290.079 ienwoner (1 jannewoari 2006). De provìnzie heurt tot [[Waalnlaand|Wallonie]]. t Grinst ien t westen aan [[Westfloandern]] en [[Frankriek]] (depaartemint [[Nord - Pas-de-Calais]]), ien t zuden ook aan Frankriek, ien t oosten aan [[Noamen (provìnzie)|Noamen]] en ien t noorden aan [[Woals Broabant]].
 
 t Grootste dail van t tegenswoordege Hainego ligt op t grondgebied van t vrougere [[geveschop Hainego]]. Der is ook n dail dat tegenswoordeg ien Noord-[[Frankriek]] ligt, ien t [[departement (Frankriek)|depaartemint]] [[Nord (departement)|Nord]].
