--- a/13e_eeuw.mw
+++ b/13e_eeuw.mw
@@ -1,4 +1,4 @@
-[[Decennia]] - [[Eeuwen]] - [[12e eeuw|12<sup>e</sup> eeuw]] - '''13<sup>e</sup> eeuw - [[14e eeuw|14<sup>e</sup> eeuw]]'''
+[[Decennia]] - [[Eeuwen]] - [[12e eeuw|12<sup>e</sup> eeuw]] - '''13<sup>e</sup> eeuw''' - [[14e eeuw|14<sup>e</sup> eeuw]]
 
 == 13e eeuw ==
 {| border="1" cellpadding="5" style="border-collapse:collapse;border:1px solid silver"
