--- a/Motte_(kasteel).mw
+++ b/Motte_(kasteel).mw
@@ -91,7 +91,7 @@ In [[Frieslaand]] wodt de motten [[stinswier]]en of [[Hege wier]]en eneumd.
 * [http://nl.youtube.com/watch?v=eOLmGN_Y_k0 Fimpjen van middeleeuws gevecht mit op den achtergroand n mottekasteel] 
 
 {{Bron|
-* R.M. van Heeringen, A.G. Jong, M.J.G.Th. Montforts, A.W.P.M. Penders & C.A.M. van Rooijen, ''Monumenten van aarde. Beeldcatalogus van de Zeeuwse bergjes, Koudekerke 2007.
+* R.M. van Heeringen, A.G. Jong, M.J.G.Th. Montforts, A.W.P.M. Penders & C.A.M. van Rooijen, ''Monumenten van aarde. Beeldcatalogus van de Zeeuwse bergjes'', Koudekerke 2007.
 * Horst Wolfgang Böhme: ''Der Hochmittelalterliche Burgenbau. Burgen vom 10. bis Mitte des 12. Jahrhunderts.'' In: ''Burgen in Mitteleuropa. Ein Handbuch.'' 2 Bände, Deutsche Burgenvereinigung (Hrsg.) Stuttgart 1999, Band 1 S. 54 - 77.
 }}
 
