--- a/Rudolf_Kinau.mw
+++ b/Rudolf_Kinau.mw
@@ -7,9 +7,9 @@ Zien eerste vertellegien schreef e in 1916 bi'j 't hengaon van zien oldere breur
 Kinau sprak zien gedichten en vertellegies ok in veur langspeulriegen as ''Wort und Stimme'' en ''Niederdeutsche Stimmen''. Hi'j hef een antal priezen ewunnen veur zien schrieveri'je, daorunder in 1962 de Fritz-Reuter-pries veur Platduutse literatuur. Ok kreeg e de eremedallie van de Verdienstorden der Bundesrepubliek Deutschland.
 
 ==Citaot==
-''Doe hest oens wol toropen, wie schoelen man ne troerig wezen?<br />
-''  Dat zund wie jao doch, Jan, - ober wie wult man getroost wieder leven un wult ook af un an maol lachen. Wult ne jummer jammern um die, wult die dien rauh man gunnen. Doe hest jao ook lacht un lewt, hest 'n kort leven vol meucht un arbeid ober ook vol zunschien un lachen had. Un hest wol ook 'n scheunen dood had. Slop nu man scheun, bust good uphoben!<br />
-''  Bust jao ook jummer bie oens! Zitst noe jao ook hier blangen mie in 't gras. Un wie kiekt beid nao dat lut scheune dörp mit de roden dakken un de greunen buim. Un allns roendum is zo stil un zo fijn! ----<br />
+''Doe hest oens wol toropen, wie schoelen man ne troerig wezen?''<br />
+''  Dat zund wie jao doch, Jan, - ober wie wult man getroost wieder leven un wult ook af un an maol lachen. Wult ne jummer jammern um die, wult die dien rauh man gunnen. Doe hest jao ook lacht un lewt, hest 'n kort leven vol meucht un arbeid ober ook vol zunschien un lachen had. Un hest wol ook 'n scheunen dood had. Slop nu man scheun, bust good uphoben!''<br />
+''  Bust jao ook jummer bie oens! Zitst noe jao ook hier blangen mie in 't gras. Un wie kiekt beid nao dat lut scheune dörp mit de roden dakken un de greunen buim. Un allns roendum is zo stil un zo fijn! ----''<br />
 ''  Dat is 'n fijnen plats hier! Hier mag ik geern zitten.''
 
 Uut: 'Achtern Diek', in Rudolf Kinau (1923), ''Blinkfüer'', Hambörg: Quickborn Verlag ''(oaverezet in de [[Drèentse schriefwieze]])''
