--- a/Laandsmeer.mw
+++ b/Laandsmeer.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Landsmeer vlag.svg
 | bestaandsnaam woapn = Landsmeer wapen.png
 | lokatie = LocatieLandsmeer
-| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|border|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Laandsmeer
 | öppervlakte = 26,44
 | öppervlakte laand = 22,76
@@ -33,9 +33,9 @@ Op 1 augustus 1966 verloor Laandsmeer bi-j ne gemeenteleke herindealing een stuk
 Noe is Laandsmeer ne 'sloapgemeente' veur warknemmers en gepensioneerden in de regio.
 Wee doar noe kump, tröf nen langen smallen weg langs de beake an, woarovver bruggen noar de huze ligt. De olde uutstroaling van enen weg mit lintbebouwing is nog dudelek anwezzig. Et darp is dankzi-j de greune grenzen tussen [[Zaanstad]], [[Amsterdam]] en [[Purmerend]] nog altied een gebeed mit völle water, greun en natuurgebeedn as [[Et Twisken]] en et (bi-j biologen wealdbereumde) [[Ilperveld]] woar völle bi-jzondere diersoorten eur thuus hebt, tiedelek in 1 of 3 seizoenen, of et heile joar deur.
 
-[[Ofbeelding:Umgeaving_den_ilp.jpg|thumb|right|2oopx|Anzicht op mölle bi-j Den Ilp]]
+[[Ofbeelding:Umgeaving_den_ilp.jpg|thumb|200px|Anzicht op mölle bi-j Den Ilp]]
 == Uutgoande verwiezingen ==
-* [http://www.landsmeer.nl Webstea van de gemeente]
+* [http://www.landsmeer.nl/ Webstea van de gemeente]
 * [http://www.hettwiske.nl/ Natuurgebeed Et Twisken]
 
 {{Noord-Hollaand}}
