--- a/Transnistrie.mw
+++ b/Transnistrie.mw
@@ -1,5 +1,5 @@
 {{Landtabel
-| nameinlandstaal = Република Молдовеняскэ Нистрянэ<br /><small>(''Republica Moldovenească Nistreană'')
+| nameinlandstaal = Република Молдовеняскэ Нистрянэ<br /><small>(''Republica Moldovenească Nistreană'')</small>
 | vlagge = Transnistria State Flag.svg
 | wåpen = Transnistria-coa.svg
 | lokaty = TransnistrieLocatie.png
