--- a/Jaap_Meijer_(schriever).mw
+++ b/Jaap_Meijer_(schriever).mw
@@ -9,21 +9,23 @@ Meijer het veul schreven over de geschiednis van de Nederlaandse Jeuden, ien t b
 Zien dichterij gaait voak over t onthaimde gevuil van de Jeuden ien de [[diaspora]], t Jeudse leven ien t veuroorlogse Nederlaand en zien aigen jonkhaid ien oostelk [[Grunnen (provìnzie)|Grunnen]]. t Is voak swaart van toon. n Hail ìnde van zien gedichten binnen [[vaarregel]]s. Sums broekte hai meer as ain toal ien ain gedicht. Dichtwaark is eerst benoam ien aigen beheer oetkommen; loater ien riege 'Horizon-Taal' van [[Het Drentse Boek]].<ref>Fokko Veldman en Hanny Diemer (2008), De literatuur van Groningen. Ien Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde'' (Azzen: Van Gorcum). Blz 348</ref>
 
 ==Citoat==
-:''mit gain veurgeslacht verwìnd
-:''bie overleevrn welbekìnd
-:''heb 'k aign geslachtsboom verzìnd
+<poem style="margin-left:1.5em; font-style:italic">
+mit gain veurgeslacht verwìnd
+bie overleevrn welbekìnd
+heb 'k aign geslachtsboom verzìnd
 
-:''dou destieds muik veurolder van mie
-:''hail mooie jiddische poëzie
-:''teminznt in mien fantezie
+dou destieds muik veurolder van mie
+hail mooie jiddische poëzie
+teminznt in mien fantezie
 
-:''zo woar ask leevmt blief
-:''hai schreef zien vingers stief
-:''zee mie aine van 't archief
+zo woar ask leevmt blief
+hai schreef zien vingers stief
+zee mie aine van 't archief
 
-:''over vèrn zuver zien zeun
-:''vin ik vannacht op beun
-:''laifdesladder oet zien dreum''
+over vèrn zuver zien zeun
+vin ik vannacht op beun
+laifdesladder oet zien dreum
+</poem>
 
 Oet t gedicht ''ahnenstolz'', ien bundel ''Inkele raais''
 
@@ -80,6 +82,7 @@ Oet t gedicht ''ahnenstolz'', ien bundel ''Inkele raais''
 *[https://www.youtube.com/watch?v=z8fYCu2TgvU Veurlezen deur Jan Glas van gedichten van Saul van Messel (Jaap Meijer) (III)]
 *[https://www.youtube.com/watch?v=IqLctZzfTsQ Veurlezen van Saul van Messel (Jaap Meijer) zien gedicht 'ahnenstolz']
 
-[[Kategorie:Grunnegs_artikel|Meijer, Jaap]]
-[[Kategorie:Historikus|Meijer, Jaap]]
-[[Kategorie:Schriever ien t Grunnegs|Meijer, Jaap]]
+{{DEFAULTSORT:Meijer, Jaap}}
+[[Kategorie:Grunnegs_artikel]]
+[[Kategorie:Historikus]]
+[[Kategorie:Schriever ien t Grunnegs]]
