+video #WPWP #WPWPBN

--- a/Waeterstof.mw
+++ b/Waeterstof.mw
@@ -14,7 +14,7 @@
 | ofbeelding2   =
 | umskrieving2  =
 }}
-
+[[Bestaand:Emissions Spectra.webm|duum|Hydrogen Spectrum Test]]
 '''Waeterstof''' is een [[scheikunde|scheikundig element]] mit symbool '''H''' en [[atoomnommer]] [[1 (getal)|1]]. Et is een kleurloos niet-metaol. Et wodt ok wel '''waeterstofgas''' nuumd. Dit is een [[pleonasme]], omdat waeterstof bi'j normaole [[temperatuur|temperetuur]] en drok altied een gas is.
 
 == Ontdekking ==
