Wysigingen döär [[Special:Contributions/86.86.95.231|86.86.95.231]] ([[User talk:86.86.95.231|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:XXBlackburnXx|XXBlackburnXx]]

--- a/Pest.mw
+++ b/Pest.mw
@@ -4,7 +4,7 @@ De '''pest''' ok wel '''zwatte dood''' nuumd, is een [[ziekte]] die van de [[14e
 
 Tussen [[1663]] en [[1664]] sturven 34.000 van de 200.000 inwoners van [[Amsterdam]] an disse ziekte, en in hiel Europa tientallen miljoenen. De belangriekste vormen van de zwatte dood bin [[bultepest]] en [[longpest]].
 
-== Verscheinsels ==
+== Verschiensels ==
 Meensken raeken besmet deur een biete van een besmette rottevlo. In de eerste 2-7 daegen bin de meensken huterig, hebben koorse en [[kopzeerte|heufdpiene]]. Nao kotte tied raeken de [[lymfeklier]]en van et slaachtoffer besmet; dat gaot gepeerd mit vervloeiing en abcesvorming, de 'bulten' van de bultepest. In pattie gevallen kan de bakterie ok de longen van de pesjent besmetten, hi'j kriegt dan een aandere variaant van de ziekte: de '''longpest'''. Hoesten en bloed ophoesten treden op. Allienig de [[longpest]] kan (deur hoesten) overdreugen wodden van meenske op meenske; elke besmetting van de [[bultepest]] wodt veroorzaekt deur de [[vlo]] van de huusbunnen [[rotte]]. De bakterie kan him ok in et bloed gaon vermenigvuldigen wat leidet tot [[sepsis]] en intrakutane bloedings (paorse plakken). In dit stadium is de pesjent ten dode opschreven behalven as vrogtiedig mit intraveneuze antibiotika begonnen wodt. 
 In een peer gevallen is annemelik maekt dat bieten deur meenskevlooien de ziekte overbrocht hebben mar de bakterie overleeft hierin niet lange en dit is niet de normaole besmettingsmeniere.
 
