--- a/Joekelille.mw
+++ b/Joekelille.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Ukulele wall.jpg|thumb|right|Ne mure vol met Joekelilles]]
+[[Ofbeelding:Ukulele wall.jpg|thumb|Ne mure vol met Joekelilles]]
 
 Ne '''joekelille''' of '''ukelele''' (in andere språken vake skreaven as ''ukelele'' of ''ukulele'') is een klein snaarinstrument. Et wördt vake (unterecht) nen "mini[[gitaar]]" enömed, üm dat et dår wat vorm angeyt wal vöäle up likt. In teagenstelling töt gitaren hevt ne ukelele mär veer snåren (nen gitaar hevt der ja sesse). De ukelele kenmarket sik döär een sacht, leevlik geluud.
 
@@ -7,7 +7,7 @@ De ukelele stammet uut et [[Hawaii]] van de [[19e eeuw|19de eywe]]. Et was ne lo
 Ukeleles heb y in 4 måten: [[sopraan]], concert, [[tenoor]] en [[bariton]].
 
 ==Stemming==
-Ukeleles sint meysttyds estemmed in '' GCEA'. Dårby is de C de bassnåre en de G is nen oktaaf höyger. Dit wörd C-stemming enömed. Ne andere populaere stemming is ''BDF#A'' (D-stemming). Döärdat de snåren hyr al in een good-klinkend akkoord estemmed ståt, is disse stemming dübbel so makkelik üm te bespöllen.
+Ukeleles sint meysttyds estemmed in ''GCEA''. Dårby is de C de bassnåre en de G is nen oktaaf höyger. Dit wörd C-stemming enömed. Ne andere populaere stemming is ''BDF#A'' (D-stemming). Döärdat de snåren hyr al in een good-klinkend akkoord estemmed ståt, is disse stemming dübbel so makkelik üm te bespöllen.
 
 ==Ukeleles in de [[Saksenmarken]]==
 In et [[Nedersaksisch|Neadersassiske]] gebeed sint ukeleles nooit heyl seriöös döär edrüngen. Net as in de rest van (Noord) [[Europa (continent)|Europa]] wördt et instrument meysttyds nit vöär vul an eseen. Den bekendsten neadersassisken artist den as mangs wat med ne ukelele düt is [[Daniël Lohues]]. Yts minder bekend was [[Harm oet Riessen]], den as der een heyl värsken an wydden.
@@ -21,7 +21,6 @@ Den ukelelespöller den as et instrument wearldwyde bekendheid verskaffeden was 
 In [[2010]] had den [[Verienigde Staoten van Amerika|amerikaansken]] band [[Train (band)|Train]] nen wearldhit med öär nummer "Hey Soul Sister". Hyrin nemt de ukele ne vöärname steade in. In [[2011]] köäm [[Eddie Vedder]], 'n sanger van den band [[Pearl Jam]], med een solo-album ''Ukelele Songs'', med dårup 16 originäle nummers med enkel ne ukelele as begeleiding.
 
 Up [[YouTube]] is den amerikaan [[Jake Shimabukuro]] bekend üm syne behearsing van et instrument.
-
 
 ==Uutgånde koppeling==
 *[http://www.get-tuned.com/ukulele_tuning_methods.php Websteyde oaver ukeleles, med stemhülpe]
