([[c:GR|GR]])  [[File:Flag of Landgraaf.png]] → [[File:Flag of Landgraaf.svg]]

--- a/Laandgraaf_(gemeente).mw
+++ b/Laandgraaf_(gemeente).mw
@@ -1,6 +1,6 @@
 {{Gemaente |
 naam = Laandgraaf |
-bestaandsnaam vlagge = Flag of Landgraaf.png |
+bestaandsnaam vlagge = Flag of Landgraaf.svg |
 bestaandsnaam woapn = Coat of arms of Landgraaf.png |
 lokatie = LocatieLandgraaf |
 proveensie = [[Limburg (Nederlaand)|Limburg]] |
