([[c:GR|GR]])  [[File:Landsmeer wapen.png]] → [[File:Landsmeer.svg]]

--- a/Laandsmeer.mw
+++ b/Laandsmeer.mw
@@ -1,7 +1,7 @@
 {{Gemeante
 | naam = Laandsmeer
 | bestaandsnaam vlagge = Landsmeer vlag.svg
-| bestaandsnaam woapn = Landsmeer wapen.png
+| bestaandsnaam woapn = Landsmeer.svg
 | lokatie = LocatieLandsmeer
 | proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|border|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Laandsmeer
