([[c:GR|GR]])  [[File:Langedijk vlag.png]] → [[File:Langedijk vlag.svg]]

--- a/Langediek.mw
+++ b/Langediek.mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | naam = Langediek
-| bestaandsnaam vlagge = Langedijk vlag.png
+| bestaandsnaam vlagge = Langedijk vlag.svg
 | bestaandsnaam woapn = Langedijk wapen.png
 | lokatie = LocatieLangedijk
 | proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
