--- a/Langediek.mw
+++ b/Langediek.mw
@@ -1,7 +1,7 @@
 {{Gemeante
 | naam = Langediek
 | bestaandsnaam vlagge = Langedijk vlag.svg
-| bestaandsnaam woapn = Langedijk wapen.png
+| bestaandsnaam woapn = Langedijk.svg
 | lokatie = LocatieLangedijk
 | proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Langediek
