--- a/Jan_Poortman.mw
+++ b/Jan_Poortman.mw
@@ -13,7 +13,7 @@ End jaoren dartig was Poortman betrökken bi'j de oprichting van ''Saksenland'',
 * ''Siebo Siebels' zwoare gaank'' (1932, vertaler)
 *''Uut en um oes olde laandschop'' (1940, samensteller. Skoelleesboekien mit teksten in 't Drèents en Nederlaans van verskeiden skrievers)
 *''Steven Coerts. Verhaal van een Ruiner familie uit de 17de eeuw'' (1941, roman, eerst verskenen as fulleton)
-*''Oud-Drentsch boerenleven (1941, Zuudwest-Drèentse gebruken naor 't kelenderjaor; Nederlaans en Drèents)
+*''Oud-Drentsch boerenleven'' (1941, Zuudwest-Drèentse gebruken naor 't kelenderjaor; Nederlaans en Drèents)
 *''Drente, een handboek voor het kennen van het Drentsche leven in voorbije eeuwen'' (diel 1 1943, diel 2 1951, mitskriever)
 *''Drents geestesleven. Een bloemlezing uit de Drentse literatuur'' (1954)
 *''Drentse verzetsgedichten'' (1977)
@@ -22,6 +22,7 @@ End jaoren dartig was Poortman betrökken bi'j de oprichting van ''Saksenland'',
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
-[[Kategorie:Drèents artikel|Poortman, Jan]]
-[[Kategorie:Schriever in 't Drèents|Poortman, Jan]]
-[[Kategorie:Geschiedenis van Drenthe|Poortman, Jan]]
+{{DEFAULTSORT:Poortman, Jan}}
+[[Kategorie:Drèents artikel]]
+[[Kategorie:Schriever in 't Drèents]]
+[[Kategorie:Geschiedenis van Drenthe]]
