Verwysing nå döärverwyssyde repareerd ([[De Wiek]] nå [[De Wiek (Drenthe)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Jan_Poortman.mw
+++ b/Jan_Poortman.mw
@@ -1,7 +1,7 @@
-'''Jan Poortman''' ([[De Wiek]], 1 oktober [[1897]] - [[Möppelt]], [[1984]]) was een [[Drenthe|Drèentse]] skriever en onderwiezer, die te boek stund as kenner van de geskiedenis van zuudwest-Drenthe. Hi'j perbeerden ok de interesse veur [[Nedersaksisch]]e literatuur, inclusief die van [[Duutslaand]], an te fietern.
+'''Jan Poortman''' ([[De Wiek (Drenthe)|De Wiek]], 1 oktober [[1897]] - [[Möppelt]], [[1984]]) was een [[Drenthe|Drèentse]] skriever en onderwiezer, die te boek stund as kenner van de geskiedenis van zuudwest-Drenthe. Hi'j perbeerden ok de interesse veur [[Nedersaksisch]]e literatuur, inclusief die van [[Duutslaand]], an te fietern.
 
 ==Opleiding en vrog wark==
-Poortman weur geboren in een boerengezin en deu de onderwiezersopleiding in Möppelt. Tussen 1919 en 1924 gaf e les in [[De Rieverst]], [[De Wiek]], [[Aduard]] en [[Möppelt]]. In dizze leste plaatse weur e in 1924 heufd van de skoele. Ok gaf e les an de Handelsaovendskoele, intied det e studeerden veur de akte [[m.o.-Nederlaans]]. Wieder warkten e as verslaggèver en fulletonskriever veur de ''Meppeler Courant'', de [[Nieuwe Rotterdamsche Courant|''NRC'']] en een riege noordelijke kraanten.
+Poortman weur geboren in een boerengezin en deu de onderwiezersopleiding in Möppelt. Tussen 1919 en 1924 gaf e les in [[De Rieverst]], [[De Wiek (Drenthe)|De Wiek]], [[Aduard]] en [[Möppelt]]. In dizze leste plaatse weur e in 1924 heufd van de skoele. Ok gaf e les an de Handelsaovendskoele, intied det e studeerden veur de akte [[m.o.-Nederlaans]]. Wieder warkten e as verslaggèver en fulletonskriever veur de ''Meppeler Courant'', de [[Nieuwe Rotterdamsche Courant|''NRC'']] en een riege noordelijke kraanten.
 
 ==Skrieveri'je==
 [[Ofbeelding:SieboSiebels.jpg|right|thumb|120px|''Siebo Siebels' zwaore gaank'', Poortman zien ummezetting van een Oostfriese roman]]
